tests/should_fail/missing_arg_type.jou
def f(x):  # Error: expected ':' and a type after the argument name (example: "foo: int"), got ')'
    return 'x'
